Initial implementation of the system entity descriptor panel

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
@@ -157,6 +157,7 @@
                     </ContextMenu>
               </contextMenu>
             </TreeTableView>
+            <fx:include source="SystemEntityDescriptorPanel.fxml" fx:id="systemEntityDescriptor" />
          </children>
          <padding>
             <Insets top="0.01" />
