--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ModelBrowserView.fxml
@@ -23,12 +23,20 @@
 <?import org.controlsfx.control.textfield.CustomTextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<TitledPane fx:id="displayTitledPane" text="Hierarchical System Model" collapsible="false" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ModelBrowserViewController">
-   <content>
-      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0">
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane fx:id="displayTitledPane" disable="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ModelBrowserViewController">
+   <children>
+      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0"
+            AnchorPane.topAnchor="0.0" AnchorPane.rightAnchor="0.0"
+            AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
          <children>
             <ToolBar maxWidth="1.7976931348623157E308" prefHeight="32.0">
                <items>
+                   <ImageView fx:id="searchImage" pickOnBounds="true" preserveRatio="true">
+                       <image>
+                           <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/24px/search.svg.png" />
+                       </image>
+                   </ImageView>
                   <CustomTextField fx:id="filterText" maxWidth="1.7976931348623157E308" prefHeight="25.0" minWidth="60.0" HBox.hgrow="ALWAYS">
                       <tooltip>
                           <Tooltip text="Text matching (contains)" />
@@ -171,5 +179,8 @@
             <Insets top="0.01" />
          </padding>
       </VBox>
-   </content>
-</TitledPane>
+   </children>
+    <padding>
+        <Insets top="0" right="0" left="0" bottom="0"/>
+    </padding>
+</AnchorPane>
