--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ConnectorStatusWidget.fxml
@@ -27,82 +27,86 @@
   -->
 
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.control.Tooltip?>
 <VBox prefWidth="350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ConnectorStatusWidgetController">
    <children>
       <ToolBar maxWidth="1.7976931348623157E308" prefHeight="32.0" VBox.vgrow="NEVER">
          <items>
-            <Circle fx:id="statusCircle" fill="#52565b" radius="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="6.0" left="6.0" right="6.0" top="8.0" />
-               </HBox.margin>
-            </Circle>
-            <Label fx:id="nameLbl" maxHeight="24.0" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="0.0" prefHeight="24.0" text="-- Connector name --" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <ImageView fx:id="reconnectImg" focusTraversable="true" onMouseClicked="#reconnectButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView fx:id="startStopImg" focusTraversable="true" onMouseClicked="#startStopButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView fx:id="abortImg" focusTraversable="true" onMouseClicked="#abortButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView fx:id="initImg" focusTraversable="true" onMouseClicked="#initButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
+            <VBox HBox.hgrow="ALWAYS">
+               <HBox VBox.vgrow="NEVER">
+                  <Circle fx:id="statusCircle" fill="#52565b" radius="8.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" HBox.hgrow="NEVER">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </HBox.margin>
+                  </Circle>
+                  <Label fx:id="nameLbl" maxHeight="24.0" maxWidth="1.7976931348623157E308" minHeight="24.0" minWidth="0.0" prefHeight="24.0" text="-- Connector name --" HBox.hgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="0.0" />
+                     </HBox.margin>
+                  </Label>
+                  <ImageView fx:id="reconnectImg" focusTraversable="true" onMouseClicked="#reconnectButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+                  <ImageView fx:id="startStopImg" focusTraversable="true" onMouseClicked="#startStopButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+                  <ImageView fx:id="abortImg" focusTraversable="true" onMouseClicked="#abortButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+                  <ImageView fx:id="initImg" focusTraversable="true" onMouseClicked="#initButtonClicked" pickOnBounds="true" preserveRatio="true" HBox.hgrow="NEVER">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </HBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+               </HBox>
+               <HBox VBox.vgrow="NEVER">
+                  <children>
+                     <Label fx:id="alarmLbl" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="70.0" prefHeight="24.0" prefWidth="70.0" text="Alarm" textAlignment="CENTER" HBox.hgrow="NEVER">
+                        <HBox.margin>
+                           <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                        </HBox.margin>
+                     </Label>
+                     <Label fx:id="rxLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" minWidth="96.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
+                        <HBox.margin>
+                           <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                        </HBox.margin>
+                     </Label>
+                     <Label fx:id="txLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" minWidth="96.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
+                        <HBox.margin>
+                           <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                        </HBox.margin>
+                     </Label>
+                     <Label maxWidth="1.7976931348623157E308" prefHeight="24.0" HBox.hgrow="ALWAYS">
+                        <HBox.margin>
+                           <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                        </HBox.margin>
+                     </Label>
+                  </children>
+               </HBox>
+            </VBox>
          </items>
       </ToolBar>
       <Separator prefWidth="200.0" />
-      <HBox VBox.vgrow="NEVER">
-         <children>
-            <Label fx:id="alarmLbl" alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="100.0" prefHeight="24.0" prefWidth="100.0" text="Alarm" textAlignment="CENTER" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <Label fx:id="rxLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" minWidth="96.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <Label fx:id="txLabel" alignment="CENTER_RIGHT" layoutX="79.0" layoutY="13.0" minWidth="96.0" prefHeight="24.0" prefWidth="96.0" text="0" textAlignment="CENTER">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-            <Label maxWidth="1.7976931348623157E308" prefHeight="24.0" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-               </HBox.margin>
-            </Label>
-         </children>
-      </HBox>
+
    </children>
 </VBox>
