--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MimicsDisplayView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MimicsDisplayView.fxml
@@ -29,11 +29,16 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.control.Tooltip?>
-<TitledPane fx:id="displayTitledPane" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" text="Mimics Displays" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.MimicsDisplayViewController">
+<?import eu.dariolucia.reatmetric.ui.widgets.EnhancedTitledPane?>
+
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.CheckMenuItem?>
+<EnhancedTitledPane fx:id="displayTitledPane" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" text="Mimics Displays" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.MimicsDisplayViewController">
    <content>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0">
          <children>
-            <ToolBar maxWidth="1.7976931348623157E308" minWidth="1.0" prefHeight="32.0">
+            <ToolBar fx:id="toolbar" maxWidth="1.7976931348623157E308" minWidth="1.0" prefHeight="32.0">
                <items>
                   <MenuButton fx:id="loadBtn" mnemonicParsing="false" text="Load..." prefHeight="25.0" prefWidth="100.0" />
                </items>
@@ -69,4 +74,12 @@
          </padding>
       </VBox>
    </content>
-</TitledPane>
+   <titleContextMenu>
+      <ContextMenu>
+         <items>
+            <CheckMenuItem fx:id="toggleShowToolbarItem" mnemonicParsing="false" selected="true" text="Show toolbar" />
+            <MenuItem fx:id="detachMenuItem" onAction="#detachAttachItemAction" mnemonicParsing="false" text="Attach to tab pane" disable="true" />
+         </items>
+      </ContextMenu>
+   </titleContextMenu>
+</EnhancedTitledPane>
